# Alexandrite

./: .gitmodules  README.md  build.sbt  build.ys
src/main/scala/: AlexandriteKVSP.scala  Config.scala  CoreUnit.scala  ExUnit.scala  IdWbUnit.scala  MemUnit.scala  RegFile.scala
test/: CMakeLists.txt
test/cfib/: CMakeLists.txt  sim4cfibtest.cpp
test/riscv-tests/: CMakeLists.txt  link.ld  riscv_test.h  sim_riscv_test.cpp
